--- a/bower.json
+++ b/bower.json
@@ -5,12 +5,7 @@
   "description": "Dropzone is an easy to use drag'n'drop library. It supports image previews and shows nice progress bars.",
   "homepage": "http://www.dropzonejs.com",
   "main": [
-    "dist/dropzone.css",
-    "dist/dropzone.js"
-  ],
-  "ignore": [
-    "*",
-    "!dist",
-    "!dist/**/*"
-  ]
+    "dropzone.js"
+    "dropzone.css",
+  ], 
 }
